Update conda dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,7 @@ env:
         # For this package-template, we include examples of Cython modules,
         # so Cython is required for testing. If your package does not include
         # Cython code, you can set CONDA_DEPENDENCIES=''
-        - CONDA_DEPENDENCIES=''
-        # - CONDA_DEPENDENCIES='Cython numpy scipy matplotlib'
+        - CONDA_DEPENDENCIES='scipy numpy nose'
     matrix:
         # Make sure that egg_info works without dependencies
         - SETUP_CMD='egg_info'
@@ -61,20 +60,20 @@ matrix:
           env: ASTROPY_VERSION=development
 
         # Try older numpy versions
-        # - python: 2.7
-        #   env: NUMPY_VERSION=1.8
-        # - python: 2.7
-        #   env: NUMPY_VERSION=1.7
-        # - python: 2.7
-        #   env: NUMPY_VERSION=1.6
+        - python: 2.7
+          env: NUMPY_VERSION=1.8
+        - python: 2.7
+          env: NUMPY_VERSION=1.7
+        - python: 2.7
+          env: NUMPY_VERSION=1.6
         # Try older scipy versions
-        # - python: 2.7
-        #   env: SCIPY_VERSION=0.16.0
-        # - python: 2.7
-        #   env: SCIPY_VERSION=0.15.0
-        # - python: 2.7
-        #   env: SCIPY_VERSION=0.14.0
- 
+        - python: 2.7
+          env: SCIPY_VERSION=0.16.0
+        - python: 2.7
+          env: SCIPY_VERSION=0.15.0
+        - python: 2.7
+          env: SCIPY_VERSION=0.14.0
+
 
 before_install:
 
@@ -102,7 +101,7 @@ install:
     # As described above, using ci-helpers, you should be able to set up an
     # environment with dependencies installed using conda and pip, but in some
     # cases this may not provide enough flexibility in how to install a
-    # specific dependency (and it will not be able to install non-Python 
+    # specific dependency (and it will not be able to install non-Python
     # dependencies). Therefore, you can also include commands below (as
     # well as at the start of the install section or in the before_install
     # section if they are needed before setting up conda) to install any
