--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ install_requires =
     numpy>=1.11.0
     scipy>=0.18.0
     matplotlib>=1.3
+    nitime
 
 [options.entry_points]
 console_scripts =
