Added a proof of concept Gp implementation

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,9 @@ install_requires =
     scipy>=1.1.0
 ; Matplotlib 3.4.0 is incompatible with Astropy
     matplotlib>=3.0,!=3.4.0
+    jax
+    numpyro
+    tinygp
 
 [options.entry_points]
 console_scripts =
